# dev_agent

./: .gitignore  SKILL.md  pyproject.toml  requirements.txt
dev_agent/: __init__.py  config.py  main.py  tools.py
dev_agent/cmd/dev-agent/: main.go
dev_agent/internal/logx/: logx.go
dev_agent/internal/orchestrator/: orchestrator.go
dev_agent/internal/tools/: handler.go  mcp.go
dev_agent_go/: go.mod
dev_agent_go/cmd/dev-agent/: main.go
dev_agent_go/internal/brain/: brain.go
dev_agent_go/internal/config/: config.go
dev_agent_go/internal/orchestrator/: orchestrator.go
dev_agent_go/internal/tools/: handler.go  mcp.go
src/dev_agent/: .main.py.swp  chat.py  config.py  main.py  models.py  tools.py
