[project]
name = "dev-agent"
version = "0.1.0"
description = "Minimal GPT-5 driven orchestrator for CLAUDE.md workflow"
authors = [{name = "Linus-inspired Agent"}]
requires-python = ">=3.10"
dependencies = [
  "openai>=1.14.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
dev-agent = "dev_agent.main:main"

[tool.setuptools.packages.find]
include = ["dev_agent*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
